--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Pigeon-Pie_2606
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: archival
+  image_path: 2606-h/images/coverb.jpg
 creator:
   author:
     agent_name: Yonge, Charlotte M. (Charlotte Mary)
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/945
     wikipedia: http://en.wikipedia.org/wiki/Charlotte_Mary_Yonge
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2606#The-Pigeon-Pie
 gutenberg_issued: '2001-04-01'
 gutenberg_type: Text
 identifiers:
