--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Pigeon-Pie_2606
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: archival
   image_path: 2606-h/images/coverb.jpg
@@ -32,5 +32,6 @@ subjects:
 - !lcc 'PZ'
 - !lcc 'PR'
 - !lcsh 'Great Britain -- History -- Civil War, 1642-1649 -- Juvenile fiction'
+- GITenberg
 title: The Pigeon Pie
 url: http://www.gutenberg.org/ebooks/2606
